Added single instance

--- a/Program/Program/Program.csproj
+++ b/Program/Program/Program.csproj
@@ -47,6 +47,16 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Game\Game.csproj">
+      <Project>{c1114a91-c106-429b-a2be-802a41128e44}</Project>
+      <Name>Game</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\IOC\IOC.csproj">
+      <Project>{71828a67-646b-4968-961b-687bbe907c5f}</Project>
+      <Name>IOC</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
