--- a/Program/Game/Game.csproj
+++ b/Program/Game/Game.csproj
@@ -40,9 +40,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Gun.cs" />
+    <Compile Include="IMedicineChest.cs" />
     <Compile Include="IPlayer.cs" />
     <Compile Include="IWeapon.cs" />
     <Compile Include="Knife.cs" />
+    <Compile Include="MedicineChest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Samurai.cs" />
     <Compile Include="Warrior.cs" />
