--- a/Program/Inject/Inject.csproj
+++ b/Program/Inject/Inject.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{C1114A91-C106-429B-A2BE-802A41128E44}</ProjectGuid>
+    <ProjectGuid>{2A914378-B279-4A5D-B3EF-305AA47B30AA}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Game</RootNamespace>
-    <AssemblyName>Game</AssemblyName>
+    <RootNamespace>Inject</RootNamespace>
+    <AssemblyName>Inject</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -39,24 +39,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Gun.cs" />
-    <Compile Include="IMedicineChest.cs" />
-    <Compile Include="IPlayer.cs" />
-    <Compile Include="IWeapon.cs" />
-    <Compile Include="Knife.cs" />
-    <Compile Include="MedicineChest.cs" />
+    <Compile Include="InjectAttribute.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Samurai.cs" />
-    <Compile Include="Warrior.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <WCFMetadata Include="Service References\" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Inject\Inject.csproj">
-      <Project>{2a914378-b279-4a5d-b3ef-305aa47b30aa}</Project>
-      <Name>Inject</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
