--- a/Program/IContainer/IContainer.csproj
+++ b/Program/IContainer/IContainer.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{71828A67-646B-4968-961B-687BBE907C5F}</ProjectGuid>
+    <ProjectGuid>{E7A1D374-BCEC-49AD-AA8A-7401FD1483D1}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Container</RootNamespace>
-    <AssemblyName>IOC</AssemblyName>
+    <RootNamespace>IContainer</RootNamespace>
+    <AssemblyName>IContainer</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -39,18 +39,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="IOCContainer.cs" />
+    <Compile Include="IContainer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\IContainer\IContainer.csproj">
-      <Project>{e7a1d374-bcec-49ad-aa8a-7401fd1483d1}</Project>
-      <Name>IContainer</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Inject\Inject.csproj">
-      <Project>{2a914378-b279-4a5d-b3ef-305aa47b30aa}</Project>
-      <Name>Inject</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
