--- a/Program/Program/Program.csproj
+++ b/Program/Program/Program.csproj
@@ -32,6 +32,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="IOC, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\IOC\bin\Debug\IOC.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -52,9 +56,9 @@
       <Project>{c1114a91-c106-429b-a2be-802a41128e44}</Project>
       <Name>Game</Name>
     </ProjectReference>
-    <ProjectReference Include="..\IOC\IOC.csproj">
-      <Project>{71828a67-646b-4968-961b-687bbe907c5f}</Project>
-      <Name>IOC</Name>
+    <ProjectReference Include="..\IContainer\IContainer.csproj">
+      <Project>{e7a1d374-bcec-49ad-aa8a-7401fd1483d1}</Project>
+      <Name>IContainer</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
